fixed settings dark mode css

--- a/ext/css/material.css
+++ b/ext/css/material.css
@@ -174,8 +174,8 @@
 
     --checkbox-unchecked-color: #999999;
 
-    --toggle-track-color: #cccccc;
-    --toggle-knob-color: #ffffff;
+    --toggle-track-color: #424242;
+    --toggle-knob-color: #9f9f9f;
 
     --selectable-indicator-color: rgba(100, 100, 100, 0.25);
 
